fix: fix poster content size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 .movies {
-    gap: 50px;
+    gap: 30px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
@@ -188,7 +188,7 @@ body {
 
     .movies {
         grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
+        gap: 20px;
     }
 
     .poster {
@@ -214,7 +214,7 @@ body {
 
     .movies {
         grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
+        /* gap: 15px; */
     }
 
     .poster {
